# kk

./: Cargo.toml  README.md  kk.plugin.zsh  test-dir.tgz  tests.zsh
Formula/: kk.rb
lib/: colors.zsh  files.zsh  format.zsh  git.zsh  options.zsh  sort.zsh  stat.zsh  utils.zsh
src/: cli.rs  colors.rs  entry.rs  format.rs  git.rs  main.rs  sort.rs
tests/: integration.rs  run-tests.zsh  test-colors.zsh  test-format.zsh  test-options.zsh  test-sort.zsh
