[package]
name = "kk"
version = "0.2.2"
edition = "2021"
description = "A fast, git-aware ls replacement"
license = "MIT"
repository = "https://github.com/dongminkim/kk"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
libgit2-sys = { version = "0.18", features = ["vendored"] }
libc = "0.2"
chrono = "0.4"
uzers = "0.12"

[dev-dependencies]
tempfile = "3"
